--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <a href="tel:+381653480153">📞 Позови: 065 348 0153</a>
         <a href="tel:+381628230025">📞 Позови: 062 823 0025</a>
         
-        <a href="https://instagram.com/lajkbend" target="_blank">📸 Инстаграм</a>
+        <a href="https://www.instagram.com/like_bend_prokuplje/" target="_blank">📸 Инстаграм</a>
+
         
         <p>&copy; 2026 Лајк Бенд</p>
     </footer>
