--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Лајк Бенд | Званични сајт</title>
+    <    <title>ЛАЈК БЕНД Прокупље - Музика за свадбе и прославе</title>
+    <meta name="description" content="Лајк Бенд Прокупље - Најбоља музика за свадбе, крштења и рођендане. Позовите нас и резервишите термин!">
+    <meta name="keywords" content="Like Bend, Лајк Бенд, Прокупље, музика за свадбе, бенд за прославе, Лајк Бенд Прокупље">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
