--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="background-logo"></div>
     <div class="overlay"></div>
     <header>
-        <h1>ЛАЈК БЕНД</h1>
-        <p>Музика за сва ваша славља</p>
+        <h1>LIKE BEND</h1>
+        <p>PROKUPLJE</p>
     </header>
     <section class="members">
         <div class="member">
