--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
     <div class="background-logo"></div>
     <div class="overlay"></div>
     <header>
-        <h1>LIKE BEND
-        ЛАЈК БЕНД</h1>
-        <p>PROKUPLJE
-        ПРОКУПЉЕ</p>
+        <h1>ЛАЈК БЕНД</h1>
+        <p>Прокупље</p>
     </header>
     <section class="members">
         <div class="member">
             <h2>О нама</h2>
-            <p>Професионални бенд за свадбе, крштења, клубове, ресторане и све врсте прослава,   </p>
+            <p>Професионални бенд за свадбе, крштења, клубове, ресторане и све врсте прослава.  </p>
         </div>
     </section>
         <section class="gallery">
