--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЛАЈК БЕНД Прокупље - Музика за свадбе и прославе</title>
-    <meta name="description" content="Лајк Бенд Прокупље - Најбоља музика за свадбе, крштења i rođendane. Pozovite nas i rezervišite termin!">
-    <meta name="keywords" content="Like Bend, Лајк Бенд, Прокупље, музика за свадбе, бенд за прославе, Лајк Бенд Прокупље">
+    <meta name="description" content="Лајк Бенд Прокупље - Најбоља музика за свадбе, крштења и рођендане. Позовите нас и резервишите термин!">
+    <meta name="keywords" content="Like Bend, Лајк Бенд, Прокупље, музика за свадбе, бенд за прославе">
 
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
         <section class="members">
             <div class="member">
                 <h2>О нама</h2>
-                <p>Професионални бенд за свадбе, крштења, клубове, ресторане и све врсте прослава. Пружамо врхунску atmosferu uz širok repertoar muzike.</p>
+                <p>Професионални бенд за свадбе, крштења, клубове, ресторане и све врсте прослава. Пружамо врхунску атмосферу уз широк репертоар музике.</p>
             </div>
         </section>
 
@@ -42,6 +42,9 @@
                 <a href="tel:+381653480153" class="btn">📞 065 348 0153</a>
                 <a href="tel:+381628230025" class="btn">📞 062 823 0025</a>
                 <a href="https://www.instagram.com/like_bend_prokuplje/" target="_blank" class="btn instagram">📸 Инстаграм</a>
+                
+                <a href="https://youtube.com/@likebandprokuplje?si=YYcoyq8TLajZTXwH" target="_blank" class="btn youtube">🎬 Јутјуб Снимак 1</a>
+                <a href="Https://youtube.com/@likebandprokuplje?si=yuuNU-YZSOBDITyo" target="_blank" class="btn youtube">🎬 Јутјуб Снимак 2</a>
             </div>
             
             <p class="copyright">&copy; 2026 Лајк Бенд</p>
