--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
 
         <section class="card" data-aos="zoom-in">
-            <h2>Галерија</h2>
+            <h2>Чланови Лајк бенд</h2>
             <div class="gallery-container">
                 <img src="slika1.jpg" alt="Наступ Лајк Бенда">
             </div>
@@ -41,8 +41,8 @@
                 <a href="tel:+381628230025" class="btn call">📞 062 823 0025</a>
                 
                 <div class="social-row">
-                    <a href="https://www.instagram.com/like_bend_prokuplje/" target="_blank" class="btn instagram">📸 Инстаграм</a>
-                    <a href="https://youtube.com/@likebandprokuplje?si=YYcoyq8TLajZTXwH" target="_blank" class="btn youtube">🎬 Јутјуб</a>
+                    <a href="https://www.instagram.com/like_bend_prokuplje/" target="_blank" class="btn instagram">📸 Instagram</a>
+                    <a href="https://youtube.com/@likebandprokuplje?si=YYcoyq8TLajZTXwH" target="_blank" class="btn youtube">🎬 YouTube</a>
                 </div>
             </div>
             
