--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
 
         <section class="card" data-aos="zoom-in">
-            <h2>Чланови Лајк бенд</h2>
+            <h2>Галерија</h2>
             <div class="gallery-container">
                 <img src="slika1.jpg" alt="Наступ Лајк Бенда">
             </div>
