--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <a href="tel:+381628230025" class="btn call">📞 Позови: 062 823 0025</a>
                 
                 <div class="social-row">
-                    <a href="https://www.instagram.com/like_bend_prokuplje/" target="_blank" class="btn instagram">📸 Инстаграм</a>
-                    <a href="https://youtube.com/@likebandprokuplje?si=YYcoyq8TLajZTXwH" target="_blank" class="btn youtube">🎬 Јутјуб 1</a>lol
+                    <a href="https://www.instagram.com/like_bend_prokuplje/" target="_blank" class="btn instagram">📸 INSTAGRAM</a>
+                    <a href="https://youtube.com/@likebandprokuplje?si=YYcoyq8TLajZTXwH" target="_blank" class="btn youtube">🎬 YouTube</a>lol
                 </div>
             </div>
         </section>
