--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 
                 <div class="social-row">
                     <a href="https://www.instagram.com/like_bend_prokuplje/" target="_blank" class="btn instagram">📸 INSTAGRAM</a>
-                    <a href="https://youtube.com/@likebandprokuplje?si=YYcoyq8TLajZTXwH" target="_blank" class="btn youtube">🎬 YouTube</a>lol
+                    <a href="https://youtube.com/@likebandprokuplje?si=YYcoyq8TLajZTXwH" target="_blank" class="btn youtube">🎬 YouTube</a>
                 </div>
             </div>
         </section>
